Update company address

--- a/impressum.html
+++ b/impressum.html
@@ -43,7 +43,7 @@
 <p>Anbieterkennzeichnung gem. § 5 TMG</p>
 
 <p>Kwiatkowsky GmbH<br>
-Jahnstr. 35<br>
+Hüttenstr. 100<br>
 40215 Düsseldorf</p>
 
 <p>Internet: www.kwiat.me<br>
