--- a/impressum.html
+++ b/impressum.html
@@ -24,7 +24,7 @@
    				});
 			}
 		</script>
-        <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 7]>
